Update-Menu-Categories

--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.css
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.css
@@ -1,20 +1,35 @@
-.navigation {
+.section-items {
   background-color: #191818;
+}
+.section-items .navigation {
   width: 100%;
-  max-width: 1920px;
   height: 82px;
   padding: 30px 0;
   position: relative;
+  background-color: #191818;
 }
-.navigation ul {
-  display: inline-block;
+.section-items .navigation .level0.active .level-top {
+  border: none;
 }
-.navigation ul li.level0 {
+.section-items .navigation .level0.active a:not(.ui-state-active) {
+  border: none;
+}
+.section-items .navigation .level0.parent > .level-top > .ui-menu-icon {
+  margin: 0;
+  padding: 0;
+}
+.section-items .navigation .level0.parent > .level-top > .ui-menu-icon::after {
+  content: none;
+}
+.section-items .navigation ul {
+  display: flex;
+  justify-content: space-between;
+}
+.section-items .navigation ul li.level0 {
   position: relative;
   display: inline-block;
-  padding: 0 100px 0 0;
 }
-.navigation ul li.level0 a.level-top.ui-menu-item-wrapper {
+.section-items .navigation ul li.level0 a.level-top.ui-menu-item-wrapper {
   color: #F1F1F1;
   text-transform: uppercase;
   text-decoration: none;
@@ -26,65 +41,109 @@
   letter-spacing: normal;
   font-family: Montserrat;
 }
-.navigation ul li.level0 a.level-top.ui-menu-item-wrapper span {
-  line-height: normal;
+.section-items .navigation ul li.level0 a.level-top.ui-menu-item-wrapper span {
   padding: 30px 0;
 }
-.navigation ul li.level0 a.level-top.ui-menu-item-wrapper:hover {
+.section-items .navigation ul li.level0 a.level-top.ui-menu-item-wrapper:hover {
   cursor: pointer;
   color: #446dff;
+  transition: 0.3s;
 }
-.navigation ul li.level0 a.level-top.ui-menu-item-wrapper:active {
+.section-items .navigation ul li.level0 a.level-top.ui-menu-item-wrapper:active {
   color: #0d2b96;
-  transition: 0.5s;
 }
-.navigation .level0.active > .level-top {
-  border: none;
+.section-items .navigation .level0.submenu {
+  background: #c9c7c7;
 }
-.navigation .level0.active > a:not(.ui-state-active) {
-  border: none;
+.section-items .navigation .level0.submenu li {
+  border-bottom: solid 1px #686868;
 }
-@media (max-width: 780px) {
-  .nav-sections-item-switch {
-    color: 191818;
+.section-items .navigation .level0.submenu li:last-child {
+  border-bottom: none;
+}
+.section-items .navigation .level0.submenu li a {
+  color: #191818;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  text-align: left;
+  font-style: normal;
+  letter-spacing: normal;
+  font-family: Montserrat;
+}
+.section-items .navigation .level0.submenu li a:hover {
+  background: #F1F1F1;
+  color: #000000;
+  transition: 0.3s;
+}
+@media (max-width: 768px) {
+  .sections.nav-sections {
+    background-color: #191818;
   }
-  .nav-sections-item-switch:active {
-    color: white;
+  .sections.nav-sections .section-items .nav-sections-item-title {
+    border-color: #c9c7c7;
+    border-left-width: 1px;
+    background: #686868;
   }
-  .nav-sections-item-switch:hover {
-    color: white;
+  .sections.nav-sections .section-items .nav-sections-item-title:first-child {
+    border-left-width: 0;
   }
-  .section-item-content ul {
+  .sections.nav-sections .section-items .nav-sections-item-title a.nav-sections-item-switch {
+    color: #F1F1F1;
+  }
+  .sections.nav-sections .section-items .nav-sections-item-title a.nav-sections-item-switch:hover {
+    color: #c9c7c7;
+    transition: 0.3s;
+  }
+  .sections.nav-sections .section-items .nav-sections-item-title a.nav-sections-item-switch:active {
+    color: #c9c7c7;
+  }
+  .sections.nav-sections .section-items .nav-sections-item-title.active {
+    background: transparent;
+  }
+  .sections.nav-sections .section-items .section-item-content .navigation {
+    padding: 0;
     height: auto;
+    background-color: transparent;
   }
-  .section-item-content .nav-sections-item-title {
-    background-color: #0d2b96;
+  .sections.nav-sections .section-items .section-item-content .navigation .level0 {
+    border-bottom: none;
+    border-top: none;
   }
-  .nav-sections .header.links {
+  .sections.nav-sections .section-items .section-item-content .navigation ul {
+    display: block;
+  }
+  .sections.nav-sections .section-items .section-item-content .navigation ul li.level0 {
+    display: block;
+  }
+  .sections.nav-sections .section-items .section-item-content .navigation ul li.level0:last-child {
+    border-bottom: none;
+    border-top: none;
+  }
+  .sections.nav-sections .section-items .section-item-content .navigation ul li.level0 a.level-top.ui-menu-item-wrapper {
+    font-size: 1.7rem;
+  }
+  .sections.nav-sections .section-items .section-item-content .navigation ul li.level0 a.level-top.ui-menu-item-wrapper span {
+    padding: 0;
+  }
+  .sections.nav-sections .section-items .section-item-content .navigation .level0.submenu li a {
+    text-align: center;
+    font-size: 1.6rem;
+  }
+  .sections.nav-sections .section-items .nav-sections-item-content ul.header.links {
     border-bottom: none;
   }
-  .nav-sections .header.links li a {
-    border-top: none;
-    color: #fff;
-  }
-  .nav-sections .header.links .greet.welcome {
+  .sections.nav-sections .section-items .nav-sections-item-content ul.header.links li.greet.welcome {
     display: none;
   }
-  .nav-sections-item-switch {
-    color: #000000;
-  }
-  .nav-sections-item-switch:active {
-    color: aquamarine;
-  }
-  .nav-sections-item-switch:hover {
-    color: aquamarine;
-  }
-  .navigation li.level0:last-child {
-    border-bottom: none;
+  .sections.nav-sections .section-items .nav-sections-item-content ul.header.links li a {
     border-top: none;
+    color: #F1F1F1;
+    font-size: 1.7rem;
   }
-  .navigation .level0 {
-    border-bottom: none;
-    border-top: none;
+  .sections.nav-sections .section-items .nav-sections-item-content ul.header.links li a:hover {
+    color: #c9c7c7;
+    transition: 0.3s;
   }
 }
