--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -1,116 +1,208 @@
-.navigation{
-    background-color: #191818;
-    width: 100%;
-    max-width: 1920px;
-    height: 82px;
-    padding: 30px 0;
-    position: relative;
+@smoke: #191818;
+@black: #000000;
+@white: #F1F1F1;
+@grey: #686868;
+@light-grey: #c9c7c7;
+@blue: #0d2b96;
+@light-blue: #446dff;
 
-    ul{
-        display: inline-block;
-
-        li.level0{
-            position: relative;
-            display: inline-block;   
-            padding: 0 100px 0 0;
-
-            a.level-top.ui-menu-item-wrapper{
-                color: #F1F1F1;
-                text-transform: uppercase;
-                text-decoration: none;
-                font-size: 18px;
-                font-weight:700;
-                line-height: normal;
-                text-align: center;
-                font-style:normal;
-                letter-spacing: normal;
-                font-family: Montserrat;
-                
-                span{
-                    line-height:normal;
-                    padding: 30px 0;
-                }
-
-                &:hover{
-                    cursor: pointer;
-                    color:#446dff;
-                }
-                &:active{
-                    color: #0d2b96;
-                    transition: 0.5s;
-                }
+.section-items{
+    background-color: @smoke;
+    .navigation{
+        width: 100%;
+        height: 82px;
+        padding: 30px 0;
+        position: relative;
+        background-color: @smoke;
+    
+        .level0.active{
+    
+            .level-top {
+            border: none;
+            }
+    
+            a:not(.ui-state-active) {
+                border: none;
             }
         }
-    }
-}
-
-//.navigation.level0.submenu{
-    //color:#191818;
-//}
-
-.navigation .level0.active > .level-top {
-   border: none;
-}
-
-.navigation .level0.active > a:not(.ui-state-active) {
-    border: none;
-}
-
-@media (max-width: 780px) {
-
-    .nav-sections-item-switch {
-        color: 191818;
-        &:active {
-          color: white;
+    
+        .level0.parent>.level-top>.ui-menu-icon{
+            margin: 0;
+            padding: 0;
+    
+            &::after{
+                content: none;
+            }
         }
-        &:hover {
-          color: white;;
-        }
-      }
-
-    .section-item-content{
+        
         ul{
-            height: auto;
-        }
-        .nav-sections-item-title{
-            background-color: #0d2b96;
-        }
-    }
-    .nav-sections {
-        .header.links {
-            border-bottom: none;
-            li {
-                a {
-                    border-top: none;
-                    color: #fff;
+            display: flex;
+            justify-content: space-between;
+    
+            li.level0{
+                position: relative;
+                display: inline-block;   
+    
+                a.level-top.ui-menu-item-wrapper{
+                    color: @white;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    font-size: 18px;
+                    font-weight:700;
+                    line-height: normal;
+                    text-align: center;
+                    font-style:normal;
+                    letter-spacing: normal;
+                    font-family: Montserrat;
+                    
+                    span{
+                        padding: 30px 0;
+                    }
+    
+                    &:hover{
+                        cursor: pointer;
+                        color:@light-blue;
+                        transition: 0.3s;
+                    }
+                    &:active{
+                        color: @blue;
+                    }
                 }
             }
-            .greet.welcome {
-                display: none;
+        }
+    
+        .level0.submenu{
+            background: @light-grey;
+    
+            li{
+                border-bottom: solid 1px @grey;
+    
+                &:last-child{
+                    border-bottom: none;
+                }
+    
+                a{
+                    color: @smoke;
+                    text-decoration: none;
+                    font-size: 16px;
+                    font-weight:400;
+                    line-height: normal;
+                    text-align: left;
+                    font-style:normal;
+                    letter-spacing: normal;
+                    font-family: Montserrat;
+    
+                    &:hover{
+                        background: @white;
+                        color: @black;
+                        transition: 0.3s;
+                    }
+                }
             }
         }
     }
+}
 
-    .nav-sections-item-switch {
-        color: #000000;
-      
-        &:active {
-          color:aquamarine;
-        }
-      
-        &:hover {
-          color:aquamarine;
-        }
-    }
 
-      .navigation {
-        li.level0:last-child {
-            border-bottom: none;
-            border-top: none;
-        }
-        .level0 {
-            border-bottom: none;
-            border-top: none;
+@media (max-width: 768px) {
+
+    .sections.nav-sections{
+        background-color: @smoke;
+
+        .section-items{
+            .nav-sections-item-title{
+                border-color: @light-grey;
+                border-left-width: 1px;
+                background: @grey;
+
+                &:first-child{
+                    border-left-width: 0;
+                }
+    
+                a.nav-sections-item-switch {
+                    color: @white;
+            
+                    &:hover {
+                      color:@light-grey;
+                      transition: 0.3s;
+                    }
+            
+                    &:active {
+                        color:@light-grey;
+                      }
+                  }
+            }
+
+            .nav-sections-item-title.active{
+                background: transparent;
+            }
+
+            .section-item-content{
+                
+                .navigation{
+                    padding: 0;
+                    height: auto;
+                    background-color: transparent;
+
+                    .level0 {
+                        border-bottom: none;
+                        border-top: none;
+                    }
+
+                    ul{
+                        display:block;
+
+                        li.level0{
+                            display:block;
+
+                            &:last-child{
+                                border-bottom: none;
+                                border-top: none;
+                            }
+
+                            a.level-top.ui-menu-item-wrapper{
+                                font-size: 1.7rem;
+
+                                span{
+                                    padding: 0;
+                                }
+                            }
+                        }
+                    }
+
+                    .level0.submenu{
+                        li{
+                            a{
+                                text-align: center;
+                                font-size: 1.6rem;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .nav-sections-item-content {
+                ul.header.links {
+                    border-bottom: none;
+
+                    li.greet.welcome {
+                        display: none;
+                    }
+
+                    li{
+                        a {
+                            border-top: none;
+                            color:@white;
+                            font-size: 1.7rem;
+
+                            &:hover{
+                                color: @light-grey;
+                                transition: 0.3s;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
