--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -1,8 +1,8 @@
 @smoke: #191818;
 @black: #000000;
 @white: #F1F1F1;
-@grey: #686868;
-@light-grey: #c9c7c7;
+@grey: #707070;
+@light-grey: #cecaca;
 @blue: #0d2b96;
 @light-blue: #446dff;
 
@@ -162,6 +162,7 @@
 
                             a.level-top.ui-menu-item-wrapper{
                                 font-size: 1.7rem;
+                                margin-left: 16px;
 
                                 span{
                                     padding: 0;
@@ -171,6 +172,7 @@
                     }
 
                     .level0.submenu{
+                        background: @light-grey;
                         li{
                             a{
                                 text-align: center;
