--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_extend.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_extend.less
@@ -2,13 +2,25 @@
     &.content {
         padding: 0;
         width: 100%;
-        max-width: calc(1920px - 2 * 340);
+        max-width: calc(1920px - 2 * 340 + 20 * 2);
         margin: 50px auto 30px auto;
-        padding: 0 20px;
+        padding: 30px 20px;
+        display: flex;
+        align-items: center;
+
+        &::before,
+        &::after {
+            display: none;
+        }
     }
 
     .logo {
         margin: 0;
+        float: none;
+        width: 89px;
+        height: 91px;
+        position: absolute;
+        left: 20px;
 
         img {
             width: 89px;
@@ -17,52 +29,52 @@
     }
 
     .block.block-search {
-        float: left;
-        margin-left: 80px;
+        float: none;
+        margin-left: 169px;
         padding: 0;
-        width: 605px;
-        margin-top: 25px;
-    }
+        width: 625px;
 
-    .form {
-        .input-text {
-            border: none;
-            border-bottom: 1px solid #000;
-            color: #cecaca;
-
-            &::placeholder {
+        .form {
+            .input-text {
+                border: none;
+                border-bottom: 1px solid #000;
                 color: #cecaca;
+
+                &::placeholder {
+                    color: #cecaca;
+                }
             }
-        }
 
-        .action.search {
-            opacity: 1;
+            .action.search,
+            .label {
+                opacity: 1;
 
-            &::before {
-                color: #000;
+                &::before {
+                    color: #000;
+                }
             }
-        }
-    }
 
-    .minicart-wrapper {
-        margin: 0;
-
-        .action.showcart:before,
-        .action.showcart.active::before {
-            content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='31' height='27' viewBox='0 0 31 27'%3E%3Cg%3E%3Cg%3E%3Cg%3E%3Cpath d='M10 25a2 2 0 1 1 4 0 2 2 0 0 1-4 0z'/%3E%3C/g%3E%3Cg%3E%3Cpath d='M23 25a2 2 0 1 1 4 0 2 2 0 0 1-4 0z'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='20' stroke-width='2' d='M1 1v0h5.273v0l3.532 17.853a2.643 2.643 0 0 0 2.637 2.146h12.813a2.643 2.643 0 0 0 2.636-2.146L30 7.666v0H7.59v0'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-            margin-top: 30px;
+            .control {
+                border-top: none;
+            }
         }
     }
 
     &.links {
-        float: left;
+        float: none;
         width: fit-content;
         list-style: none;
         margin: 0;
         padding: 0;
         display: flex;
+        white-space: nowrap;
         margin-left: 132px;
-        margin-top: 35px;
+        margin-top: 10px;
+        margin-right: 60px;
+
+        & > li {
+            margin: 0;
+        }
 
         li > * {
             color: #000;
@@ -71,6 +83,7 @@
 
         li > a {
             font-weight: 700;
+            font-size: 18px;
         }
 
         li.link.authorization-link > a::after {
@@ -87,20 +100,18 @@
             display: none;
         }
     }
-}
 
-@media only screen and (max-width: 1168px) {
-    .header {
-        .block.block-search {
-            margin-left: 70px;
-        }
+    .minicart-wrapper {
+        margin: 0;
+        float: none;
+        // margin-left: 92px;
+        margin-top: 5px;
+        position: absolute;
+        right: 20px;
 
-        &.links {
-            margin-left: 80px;
-        }
-
-        .block.block-search {
-            width: 540px;
+        .action.showcart:before,
+        .action.showcart.active::before {
+            content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='31' height='27' viewBox='0 0 31 27'%3E%3Cg%3E%3Cg%3E%3Cg%3E%3Cpath d='M10 25a2 2 0 1 1 4 0 2 2 0 0 1-4 0z'/%3E%3C/g%3E%3Cg%3E%3Cpath d='M23 25a2 2 0 1 1 4 0 2 2 0 0 1-4 0z'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='20' stroke-width='2' d='M1 1v0h5.273v0l3.532 17.853a2.643 2.643 0 0 0 2.637 2.146h12.813a2.643 2.643 0 0 0 2.636-2.146L30 7.666v0H7.59v0'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         }
     }
 }
@@ -108,15 +119,12 @@
 @media only screen and (max-width: 1024px) {
     .header {
         .block.block-search {
-            margin-left: 50px;
+            margin-left: 139px;
+            width: 514px;
         }
 
         &.links {
             margin-left: 60px;
-        }
-
-        .block.block-search {
-            width: 494px;
         }
     }
 }
@@ -124,15 +132,114 @@
 @media only screen and (max-width: 768px) {
     .header {
         &.content {
+            max-width: 94%;
             margin: 30px 0;
+            padding: 12px 20px;
+        }
+
+        .action.nav-toggle {
+            display: none;
+        }
+
+        .block.block-search {
+            width: 268px;
+
+            .form {
+                .label {
+                    display: none;
+                }
+
+                .input-text {
+                    position: static;
+                }
+            }
+
+            .action.search {
+                &::before {
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                    font-size: 16px;
+                    line-height: 32px;
+                    content: "\e615";
+                    font-family: "luma-icons";
+                    margin: 0;
+                    vertical-align: top;
+                    display: inline-block;
+                    font-weight: normal;
+                    overflow: hidden;
+                    text-align: center;
+                }
+            }
         }
 
         &.links {
             margin-left: 50px;
         }
+    }
+}
+
+@media only screen and (max-width: 625px) {
+    .header {
+        &.content {
+            max-width: 93%;
+        }
 
         .block.block-search {
-            width: 248px;
+            margin-right: 40px;
+            margin-left: 110px;
+        }
+
+        &.links {
+            display: none;
+        }
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .header {
+        &.content {
+            max-width: 89%;
+            justify-content: space-between;
+        }
+
+        .logo {
+            width: 73px;
+            height: 75px;
+            left: 92px;
+
+            img {
+                width: 73px;
+                height: 75px;
+            }
+        }
+
+        .action.nav-toggle {
+            display: flex;
+            position: static;
+        }
+
+        .block.block-search {
+            width: auto;
+            margin-right: 30px;
+            margin-top: 4px;
+
+            .form {
+                .label {
+                    display: flex;
+
+                    &.active + .control .input-text {
+                        position: absolute;
+                        top: 100%;
+                        left: 50%;
+                        max-width: 90%;
+                        transform: translate(-50%, 0);
+                    }
+                }
+
+                .input-text {
+                    position: absolute;
+                }
+            }
         }
     }
 }
