--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -4,7 +4,8 @@
 @grey: #707070;
 @light-grey: #cecaca;
 @blue: #0d2b96;
-@light-blue: #446dff;
+@light-blue: #6d8dff;
+@border-submenu-respons: #cecaca42;
 
 .section-items{
     background-color: @smoke;
@@ -53,7 +54,7 @@
                     text-align: center;
                     font-style:normal;
                     letter-spacing: normal;
-                    font-family: Montserrat;
+                    font-family: 'Montserrat-Bold';
                     
                     span{
                         padding: 30px 0;
@@ -90,7 +91,7 @@
                     text-align: left;
                     font-style:normal;
                     letter-spacing: normal;
-                    font-family: Montserrat;
+                    font-family: 'Montserrat-Bold';
     
                     &:hover{
                         background: @white;
@@ -173,16 +174,11 @@
 
                     .level0.submenu{
                         background: transparent;
-                        border-bottom: solid 1px #cecaca42;
                         li{
                             a{
                                 text-align: center;
                                 font-size: 1.6rem;
                                 color: white;
-                            }
-
-                            &:last-child{
-                                border-bottom: solid 1px #cecaca42;
                             }
                         }
                     }
