add automotive header files

--- a/app/design/frontend/Webjump/theme-automotive/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Webjump/theme-automotive/Magento_Theme/layout/default.xml
@@ -4,7 +4,7 @@
     <body>
         <referenceBlock name="logo">
             <arguments>
-                <argument name="logo_file" xsi:type="string">images/logo_volks.png</argument>
+                <argument name="logo_file" xsi:type="string">images/logo_volk.png</argument>
                 <argument name="logo_alt" xsi:type="string">Logo automotivo</argument>
             </arguments>
         </referenceBlock>
