--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
@@ -112,7 +112,7 @@
         position: absolute;
         right: 20px;
 
-        .action.showcart:before,
+        .action.showcart::before,
         .action.showcart.active::before {
             content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='31' height='27' viewBox='0 0 31 27'%3E%3Cg%3E%3Cg%3E%3Cg%3E%3Cpath d='M10 25a2 2 0 1 1 4 0 2 2 0 0 1-4 0z'/%3E%3C/g%3E%3Cg%3E%3Cpath d='M23 25a2 2 0 1 1 4 0 2 2 0 0 1-4 0z'/%3E%3C/g%3E%3Cg%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='20' stroke-width='2' d='M1 1v0h5.273v0l3.532 17.853a2.643 2.643 0 0 0 2.637 2.146h12.813a2.643 2.643 0 0 0 2.636-2.146L30 7.666v0H7.59v0'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
         }
@@ -154,12 +154,56 @@
 
                 .input-text {
                     position: static;
+                    padding-right: 30px;
                 }
             }
         }
 
         &.links {
             margin-left: 50px;
+        }
+
+        .block-search .actions {
+            position: relative;
+        }
+
+        .block-search .action.search {
+            display: inline-block;
+            background-image: none;
+            background: none;
+            box-sizing: content-box;
+            -moz-box-sizing: content-box;
+            border: 0;
+            box-shadow: none;
+            line-height: inherit;
+            margin: 0;
+            padding: 0;
+            text-decoration: none;
+            text-shadow: none;
+            font-weight: 400;
+            position: absolute;
+            right: 10px;
+            top: -45px;
+            z-index: 1;
+        }
+
+        .block-search .action.search span{
+            display: none;
+        }
+        
+        .block-search .action.search::before {
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            font-size: 16px;
+            line-height: 32px;
+            content: '\e615';
+            font-family: 'luma-icons';
+            margin: 0;
+            vertical-align: top;
+            display: inline-block;
+            font-weight: normal;
+            overflow: hidden;
+            text-align: center;
         }
     }
 }
@@ -224,8 +268,13 @@
 
                 .input-text {
                     position: absolute;
+                    padding-right: 9px;
                 }
             }
+        }
+
+        .block-search .action.search {
+            display: none;
         }
     }
 }
