--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -1,13 +1,11 @@
-@smoke: #191818;
-@black: #000000;
-@white: #F1F1F1;
-@grey: #707070;
-@light-grey: #cecaca;
-@blue: #0d2b96;
-@light-blue: #6d8dff;
+@import '_colors.less';
 
 .section-items{
     font-family: 'Montserrat-Regular';
+
+    .section-item-content{
+        display: block;
+    }
 
     background-color: @smoke;
     .navigation{
@@ -105,7 +103,7 @@
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 320px) {
 
     .sections.nav-sections{
         background-color: @smoke;
