Fixed color on visited links

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
@@ -41,7 +41,8 @@
             color: @header-text-color;
             font-family: 'Poppins-Regular';
 
-            a {
+            a,
+            a:visited {
                 height: 22px;
                 color: @header-text-color;
                 font-family: 'Poppins-Regular';
