--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_header.less
@@ -31,7 +31,7 @@
                 .input-text {
                     border: none;
                     border-bottom: 1px solid @black;
-                    color: @light-grey;
+                    color: @black;
 
                     &::placeholder {
                         color: @light-grey;
@@ -74,6 +74,7 @@
 
                 &:hover {
                     text-decoration: underline;
+                    text-underline-offset: 3px;
                 }
             }
 
