--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_extend.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_extend.less
@@ -1,3 +1,7 @@
+@screen__m: 767px;
 @import '_header.less';
 @import '_menu-categories.less';
 @import '_typography.less';
+@import '_main.less';
+@import '_banner.less';
+@import '_grid.less';
