--- a/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
+++ b/app/design/frontend/Webjump/theme-automotive/web/css/source/_menu-categories.less
@@ -8,6 +8,7 @@
     }
 
     background-color: @smoke;
+
     .navigation{
         width: 100%;
         height: 82px;
@@ -18,21 +19,25 @@
         .level0.active{
     
             .level-top {
-            border: none;
+                border: none;
             }
     
             a:not(.ui-state-active) {
                 border: none;
             }
         }
+
+        .level0.has-active {
+            .level-top{
+                border-color: @light-grey;
+                border-width: 0 0 2px;
+
+            }
+        }
     
         .level0.parent>.level-top>.ui-menu-icon{
             margin: 0;
             padding: 0;
-    
-            &::after{
-                content: none;
-            }
         }
         
         ul{
@@ -41,7 +46,6 @@
     
             li.level0{
                 position: relative;
-                display: inline-block;   
     
                 a.level-top.ui-menu-item-wrapper{
                     color: @white;
@@ -61,16 +65,22 @@
     
                     &:hover{
                         cursor: pointer;
-                        color:@light-blue;
+                        color: @light-blue;
                         transition: 0.3s;
                     }
                     &:active{
                         color: @blue;
+                        transition: 0.5s;
                     }
                 }
             }
         }
     
+        .level0 .submenu .active > a{
+            border-color: @light-grey;
+            border-width: 0 0 0 2px;
+        }
+
         .level0.submenu{
             background: @light-grey;
     
@@ -103,7 +113,7 @@
 }
 
 
-@media (max-width: 320px) {
+@media (max-width: 767px) {
 
     .sections.nav-sections{
         background-color: @smoke;
@@ -113,6 +123,7 @@
                 border-color: @light-grey;
                 border-left-width: 1px;
                 background: @grey;
+                font-size: 1.22rem;
 
                 &:first-child{
                     border-left-width: 0;
@@ -135,46 +146,46 @@
                     background-color: transparent;
 
                     .level0 {
-                        border-bottom: none;
+                        align-self: flex-start;
                         border-top: none;
+                        border-bottom: none;
+                    }
+
+                    .level0.has-active {
+                        .level-top{
+                            border: none;
+                        }
                     }
 
                     ul{
-                        display:block;
-
-                        li.level0{
-                            display:block;
-
-                            &:last-child{
-                                border-bottom: none;
-                                border-top: none;
-                            }
-
+                        flex-direction: column;
+                            
                             a.level-top.ui-menu-item-wrapper{
                                 font-size: 1.7rem;
-                                margin-left: 16px;
+                                text-align: left;
 
                                 span{
                                     padding: 0;
                                 }
                             }
-                        }
                     }
 
                     .level0.submenu{
+                        display: flex;
+                        flex-direction: column;
                         background: transparent;
+
                         li{
+                            border-bottom: none;
+
                             a{
-                                text-align: center;
                                 font-size: 1.6rem;
                                 color:@white;
                             }
                         }
                     }
                 }
-            }
 
-            .nav-sections-item-content {
                 ul.header.links {
                     border-bottom: none;
 
@@ -187,6 +198,35 @@
                             border-top: none;
                             color:@white;
                             font-size: 1.7rem;
+                        }
+                    }
+                }
+
+                .switcher-language{
+                    border-top: none;
+                    border-bottom: none;
+
+                    span{
+                        color:@white;
+                        font-size: 1.7rem;
+                    }
+
+                    .view-automotivo_store_view_pt{
+
+                        span{
+                            font-weight: 400;
+                        }
+
+                        &::after{
+                            color: @white;
+                            position: relative;
+                        }
+                    }
+
+                    .switcher-dropdown{
+                        a{
+                            color: @light-blue;
+                            font-weight: 400;
                         }
                     }
                 }
