--- a/app/design/frontend/Webjump/theme-party/web/css/source/_banners.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_banners.less
@@ -71,7 +71,6 @@
         .pagebuilder-banner-wrapper {
             margin-top: 10px;
         }
-
     }
 
     .column.main {
@@ -103,4 +102,73 @@
     }
 }
 
-@media only screen and (min-width: 769px) {}
+@media only screen and (min-width: 768px) {
+    .grid-banner-party {
+        .pagebuilder-banner-wrapper {
+            margin-top: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
+            background-size: contain !important;
+
+            .pagebuilder-overlay {
+                margin-top: 10px;
+                margin-left: 10px;
+                margin-right: 10px;
+                background-size: contain !important;
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 840px) {
+    .grid-banner-party {
+        .pagebuilder-banner-wrapper {
+            margin-bottom: -280px;
+
+            .pagebuilder-overlay {
+                margin-bottom: -280px;
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 841px) and (max-width: 920px) {
+    .grid-banner-party {
+        .pagebuilder-banner-wrapper {
+            margin-bottom: -230px;
+
+            .pagebuilder-overlay {
+                margin-bottom: -230px;
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 921px) and (max-width: 1024px) {
+    .grid-banner-party {
+        .pagebuilder-banner-wrapper {
+            margin-bottom: -180px;
+
+            .pagebuilder-overlay {
+                margin-bottom: -180px;
+            }
+        }
+
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1200px) {
+    .grid-banner-party {
+        .pagebuilder-banner-wrapper {
+            margin-bottom: -100px;
+
+            .pagebuilder-overlay {
+                margin-bottom: -100px;
+            }
+        }
+
+    }
+}
