Fixing space between images.

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_banners.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_banners.less
@@ -78,6 +78,8 @@
     }
 }
 
+
+
 @media only screen and (min-width: 480px) and (max-width: 640px) {
     .main-banner-party {
         .pagebuilder-slide-wrapper {
@@ -119,6 +121,7 @@
         }
 
     }
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 840px) {
@@ -171,4 +174,12 @@
         }
 
     }
+}
+
+@media only screen and (min-width: 1201px) {}
+
+.pagebuilder-column-group {
+    display: flex;
+    max-width: 1240px;
+    margin: 0 auto;
 }
