Fixing position of counter.qty.

--- a/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
+++ b/app/design/frontend/Webjump/theme-party/web/css/source/_header.less
@@ -75,6 +75,7 @@
 .minicart-wrapper {
     .action.showcart {
         .counter.qty {
+            margin-top: 24px;
             background: @menu-button-color;
 
         }
@@ -111,6 +112,11 @@
 
 
     .minicart-wrapper {
+        .action.showcart {
+            .counter.qty {
+                margin-top: 13px;
+            }
+        }
 
         .action.showcart::before,
         .action.showcart.active::before {
